--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -38,7 +38,7 @@ jobs:
   e2e:
     if: ${{needs.check_user_permission.outputs.has-permission}}
     needs: [check_user_permission]
-    uses: openstack-k8s-operators/openstack-k8s-operators-ci/.github/workflows/reusable-workflow-e2e.yaml@master
+    uses: tripleo-ci/openstack-k8s-operators-ci/.github/workflows/reusable-workflow-e2e.yaml@run_kuttl_tests
     with:
       operator_name: keystone-operator
     secrets: inherit
