Adapt assert check to use with sh and not bash

--- a/tests/kuttl/common/assert_sample_deployment.yaml
+++ b/tests/kuttl/common/assert_sample_deployment.yaml
@@ -248,7 +248,8 @@ commands:
       template='{{.status.apiEndpoint.admin}}{{":"}}{{.status.apiEndpoint.internal}}{{":"}}{{.status.apiEndpoint.public}}{{"\n"}}'                                                        
       regex="http:\/\/keystone-admin-openstack\.apps.*:http:\/\/keystone-internal-openstack\.apps.*:http:\/\/keystone-public-openstack\.apps.*"
       apiEndpoints=$(oc get -n openstack KeystoneAPI  keystone -o go-template=$template) 
-      if [[ "$apiEndpoints" =~ $regex ]]; then
+      matches=$(echo $apiEndpoints | sed -e "s?$regex??")
+      if [ -z "$matches" ]; then
         exit 0
       else
         exit 1
