--- a/.github/workflows/label-on-pr.yaml
+++ b/.github/workflows/label-on-pr.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   e2e:
     if: contains(github.event.pull_request.labels.*.name, 'ok-to-test')
-    uses: tripleo-ci/openstack-k8s-operators-ci/.github/workflows/reusable-workflow-e2e.yaml@run_kuttl_tests
+    uses: tripleo-ci/openstack-k8s-operators-ci/.github/workflows/reusable-workflow-e2e.yaml@golang-1.19
     with:
       operator_name: keystone-operator
     secrets: inherit
